--- a/app/src/main/res/layout/view_item_trip_header_details.xml
+++ b/app/src/main/res/layout/view_item_trip_header_details.xml
@@ -18,12 +18,12 @@
 
     <TextView
         android:id="@+id/tv_details"
-        style="@style/TextAppearance.Material3.LabelLarge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="20:00 - 3:00 -> Oradea"
         android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
